# mobile-game-template

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  android.bat  build_run.bat  compile_flags.txt  template.ini  vcpkg.json
docs/superpowers/plans/: 2026-04-24-phase1-playable-core-combat.md  2026-04-25-phase2-shop-economy.md  2026-04-25-phase3-run-structure.md  2026-04-25-phase4-unit-merge-stars.md  2026-04-25-phase5-player-level-team-size.md  2026-04-25-phase6-mobile-unit-controller.md
docs/superpowers/specs/: 2026-04-24-grayfi5h-autobattler-design.md
scripts/: android.bat  build.bat  build_run.bat
src/: Makefile  Makefile.Android  app.c  app.h  bench.c  bench.h  board.c  board.h  combat.c  combat.h  defines.h  game.c  game.h  game01.h  input.c  input.h  layout.c  layout.h  main.c  player.c  player.h  render.c  render.h  shop.c  shop.h  trait.c  trait.h  types.h  unit.c  unit.h  unit_def.c  unit_def.h
src/core/: game.c  game.h
test/: test.h  test_bench.c  test_board.c  test_combat.c  test_game.c  test_layout.c  test_runner.c  test_shop.c  test_trait.c  test_unit.c
